--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,9 @@ matrix:
 before_install:
 - openssl aes-256-cbc -K $encrypted_cbafb80fce45_key -iv $encrypted_cbafb80fce45_iv
   -in client_secret_825018774845-ldb1aj6f54s02iu06dncu5r37hgsefme.apps.googleusercontent.com.json.enc
-  -out usr/share/credentials.json
+  -out /usr/share/credentials.json
   -d
-- SREGISTRY_GOOGLE_DRIVE_CREDENTIALS=usr/share/credentials.json
+- SREGISTRY_GOOGLE_DRIVE_CREDENTIALS=/usr/share/credentials.json
 - sudo chmod u+x .travis/*.sh
 - "/bin/bash .travis/setup.sh"
 install:
