--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ before_install:
   -out /usr/share/credentials.json
   -d
 - SREGISTRY_GOOGLE_DRIVE_CREDENTIALS=/usr/share/credentials.json
+- sudo export SREGISTRY_GOOGLE_DRIVE_CREDENTIALS
 - sudo chmod u+x .travis/*.sh
 - "/bin/bash .travis/setup.sh"
 install:
